// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableToolbar component should render 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
  >
     
    Some
  </Toolbar>
</Fragment>
`;

exports[`TableToolbar component should render a footer 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar ins-m-footer"
  >
     
    Footer
  </Toolbar>
</Fragment>
`;

exports[`TableToolbar component should render with results greater than 1 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
  >
     
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    2 Results
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with results of 0 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
  >
     
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    0 Results
  </div>
</Fragment>
`;

exports[`TableToolbar component should render with results of 1 1`] = `
<Fragment>
  <Toolbar
    className="ins-c-table__toolbar"
  >
     
    Some
  </Toolbar>
  <div
    className="ins-c-table__toolbar-results"
  >
    1 Result
  </div>
</Fragment>
`;
